# sphinxtrain

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Dockerfile  Dockerfile.devel  Makefile  Makefile.am  NEWS  README  README.md  README.tracing  README.txt  ReleaseNotes  SphinxTrain.dsw  SphinxTrain.sln  aclocal.m4  config.h.in  configure  configure.ac  configure.in
include/: Makefile  Makefile.am
include/s2/: Makefile  byteorder.h  log.h  magic.h
include/s3/: Makefile  acmod_set.h  acmod_set_ds.h  agc.h  agc_emax.h  agc_max.h  array_alloc.h  array_io.h  bcomment_io.h  best_q.h  bo_magic.h  bquest_io.h  btree.h  cep_manip.h  ck_seg.h  ckd_alloc.h  clapack_lite.h  cmd_ln.h  cmn.h  common.h  corpus.h  cvt2triphone.h  div.h  dtree.h  enum_subset.h  err.h  feat.h  fgets_wo_nl.h  floatbuf_io.h  fp_cache.h  fread_retry.h  gauden.h  gauden_io.h  get_cpu_time.h  get_host_name.h  get_time.h  hash.h  heap.h  int32_io.h  intbuf_io.h  (+77 more)
include/sphinxbase/: fe.h  fixpoint.h  prim_type.h
include/sys_compat/: Makefile  file.h  misc.h  net.h  posixsock.h  string.h  time.h
python/: CMakeLists.txt  Makefile  Makefile.am  README.md  arpalm.py  feat_1s_c_d_dd.py  feat_s2_4x.py  mfcc.py  mllt.py  s2mfc.py  s3file.py  s3gau.py  s3gaucnt.py  s3lda.py  s3mdef.py  s3mixw.py  s3model.py  s3tmat.py  setup.cfg  setup.py
python/DNN_training/: README.md  genLabels.py  readStSegs.sh  test.csv
python/cmusphinx/: NNTrain.py  __init__.py  arpalm.py  classlm2fst.py  cluster_mixw.py  cmllr.py  corpus.py  dict_spd.py  divergence.py  evaluation.py  foo.dict  fstutils.py  genLabels.py  gmm.py  hmm.py  htkmfc.py  hypseg.py  lat2dot.py  lat2fsg.py  lat_rescore.py  lat_rescore_fst.py  lattice.py  lattice_conv.py  lattice_error.py  lattice_error_fst.py  lattice_prune.py  lda.py  makeFileListFromTrans.py  mfcc.py  mllr.py  mllt.py  prune_mixw.py  quantize_mixw.py  runDatasetGen.py  runNNPredict.py  runNNTrain.py  s2mfc.py  s3dict.py  s3file.py  s3gau.py  (+20 more)
python/sphinx/: __init__.py  arpalm.py  arpalm_test.py  corpus.py  corpus_test.py  gmm.py  hmm.py  hmm_test.py  htkmfc.py  hypseg.py  lattice.py  lattice_error.py  lda.py  mfcc.py  mllr.py  mllt.py  s2mfc.py  s3dict.py  s3file.py  s3gau.py  s3gaucnt.py  s3lda.py  s3mdef.py  s3mixw.py  s3model.py  s3model_test.py  s3tmat.py  sendump.py
python/test/: test_arpalm.py  test_corpus.py  test_evaluation.py  test_hmm.py  test_hypseg.py  test_s2mfc.py  test_s3dict.py  test_s3file.py  test_s3gaucnt.py  test_s3model.py
scripts/: CMakeLists.txt  Makefile.am  sphinxtrain  sphinxtrain.in
scripts/00.verify/: verify_all.pl
scripts/000.comp_feat/: make_feats.pl  slave_feat.pl
scripts/0000.g2p_train/: calculateER.py  evaluate.py  g2p_train.pl
scripts/00a.vocab_dict/: make_vocab_dict.pl
scripts/01.lda_train/: baum_welch.pl  lda_train.pl  slave_lda.pl
scripts/02.mllt_train/: baum_welch.pl  mllt_train.pl  slave_mllt.pl
scripts/10.falign_ci_hmm/: baum_welch.pl  slave_convg.pl
scripts/11.force_align/: make_spd.pl  multipron_align.pl  multipron_align.py  slave_align.pl
scripts/12.vtln_align/: slave_align.pl  vtln_align.pl
scripts/19.nn_train/: nn_train.pl  readStSegs.sh  sample_nn.cfg  stseg-read  stseg-read.c
scripts/20.ci_hmm/: baum_welch.pl  norm.pl  slave_convg.pl
scripts/21.multipron_align/: slave_align.pl
scripts/22.ci_hmm_multipron/: slave_convg.pl
scripts/30.cd_hmm_untied/: baum_welch.pl  norm_and_launchbw.pl  slave_convg.pl
scripts/40.buildtrees/: slave.treebuilder.pl
scripts/45.prunetree/: slave.state-tying.pl
scripts/50.cd_hmm_tied/: baum_welch.pl  slave_convg.pl
scripts/60.lattice_generation/: slave_genlat.pl
scripts/61.lattice_pruning/: lattice_prune.pl
scripts/62.lattice_conversion/: lattice_conv.pl
scripts/65.mmie_train/: baum_welch.pl  norm_and_launchbw.pl  slave_convg.pl
scripts/80.mllr_adapt/: baum_welch.pl  mllr_solve.pl  slave_adapt.pl
scripts/91.g2p_train/: calculateER.py  evaluate.py  g2p_train.pl
scripts/AutoTrainer/: README.md  clean-up.sh  copy-training-programs.sh  generate_transcription_file.sh  random_trainer.sh  trainer.sh
scripts/DNN_training/: NNTrain.py  README.md  ctc.py  genLabels.py  readSen.py  requirements.txt  runNNPredict.py  runNNTrain.py
scripts/decode/: psdecode.pl  slave.pl  verify_dec.pl  word_align.pl  word_align.py
scripts/lib/: test_SimpleConfig.pl
src/: CMakeLists.txt  Makefile  Makefile.am
src/libs/: Makefile  Makefile.am  README
src/programs/: Makefile  Makefile.am  Makefile_programs_libs.am  README  sphinxtrain.in
test/: Makefile  Makefile.am  Testing.Status
test/bugcase1/: time.phonelist
test/bugcase2/: bug.topo
test/cp_parm/: cp.ci_meanvar  means.1  means.100  means.12  means.25  means.3  means.50  means.6  rm1.cpmeanvar  test_means.1.txt  test_means.100.txt  test_means.12.txt  test_means.25.txt  test_means.3.txt  test_means.50.txt  test_means.6.txt
test/dict2tri/: test.dict2tri.internaltriphones  test.dict2tri.no_internaltriphones
test/init_gau/: gauden_counts.1  gauden_counts.100  gauden_counts.12  gauden_counts.25  gauden_counts.3  gauden_counts.50  gauden_counts.6  gauden_counts_lda.100  test_gauden_counts.1.out  test_gauden_counts.100.out  test_gauden_counts.12.out  test_gauden_counts.25.out  test_gauden_counts.3.out  test_gauden_counts.50.out  test_gauden_counts.6.out  test_gauden_counts_lda.100.out
test/lda_train/: lda.mat.100  lda.mat.50  test_lda.50.out
test/make_topology/: 1_nosk.topo  1_sk.topo  2_nosk.topo  2_sk.topo  3_nosk.topo  3_sk.topo  4_nosk.topo  4_sk.topo  5_nosk.topo  5_sk.topo  6_nosk.topo  6_sk.topo  7_nosk.topo  7_sk.topo
test/mk_flat/: mixw_1st_1str_1den  mixw_3st_1str_1den  mixw_5st_1str_1den  tmat_1st_1str_1den  tmat_3st_1str_1den  tmat_5st_1str_1den
test/mk_mdef_gen/: 1st.ci.mdef  1st.ut.mdef  2st.all.mdef  2st.ci.mdef  2st.ut.mdef  3st.ci.mdef  3st.ut.mdef  4st.ci.mdef  4st.ut.mdef  5st.ci.mdef  5st.ut.mdef  6st.ci.mdef  6st.ut.mdef
test/norm/: globalmean.1  globalmean.100  globalmean.12  globalmean.25  globalmean.3  globalmean.50  globalmean.6  test_globalmean.1.txt  test_globalmean.100.txt  (+5 more)
(+1882 files in other folders)
