
SUBDIRS = etc include python scripts src test

EXTRA_DIST = \
	autogen.sh \
	SphinxTrain.sln \
	m4/pkg.m4 \
	win32/msdev/libs/libclust/libclust.vcxproj \
	win32/msdev/libs/libclust/libclust.vcxproj.filters \
	win32/msdev/libs/libcommon/libcommon.vcxproj \
	win32/msdev/libs/libcommon/libcommon.vcxproj.filters \
	win32/msdev/libs/libio/libio.vcxproj \
	win32/msdev/libs/libio/libio.vcxproj.filters \
	win32/msdev/libs/libmllr/libmllr.vcxproj \
	win32/msdev/libs/libmllr/libmllr.vcxproj.filters \
	win32/msdev/libs/libmodinv/libmodinv.vcxproj \
	win32/msdev/libs/libmodinv/libmodinv.vcxproj.filters \
	win32/msdev/programs/agg_seg/agg_seg.vcxproj \
	win32/msdev/programs/agg_seg/agg_seg.vcxproj.filters \
	win32/msdev/programs/bldtree/bldtree.vcxproj \
	win32/msdev/programs/bldtree/bldtree.vcxproj.filters \
	win32/msdev/programs/bw/bw.vcxproj \
	win32/msdev/programs/bw/bw.vcxproj.filters \
	win32/msdev/programs/cp_parm/cp_parm.vcxproj \
	win32/msdev/programs/cp_parm/cp_parm.vcxproj.filters \
	win32/msdev/programs/delint/delint.vcxproj \
	win32/msdev/programs/delint/delint.vcxproj.filters \
	win32/msdev/programs/inc_comp/inc_comp.vcxproj \
	win32/msdev/programs/inc_comp/inc_comp.vcxproj.filters \
	win32/msdev/programs/init_gau/init_gau.vcxproj \
	win32/msdev/programs/init_gau/init_gau.vcxproj.filters \
	win32/msdev/programs/init_mixw/init_mixw.vcxproj \
	win32/msdev/programs/init_mixw/init_mixw.vcxproj.filters \
	win32/msdev/programs/kdtree/kdtree.vcxproj \
	win32/msdev/programs/kdtree/kdtree.vcxproj.filters \
	win32/msdev/programs/kmeans_init/kmeans_init.vcxproj \
	win32/msdev/programs/kmeans_init/kmeans_init.vcxproj.filters \
	win32/msdev/programs/make_quests/make_quests.vcxproj \
	win32/msdev/programs/make_quests/make_quests.vcxproj.filters \
	win32/msdev/programs/map_adapt/map_adapt.vcxproj \
	win32/msdev/programs/map_adapt/map_adapt.vcxproj.filters \
	win32/msdev/programs/mixw_interp/mixw_interp.vcxproj \
	win32/msdev/programs/mixw_interp/mixw_interp.vcxproj.filters \
	win32/msdev/programs/mk_flat/mk_flat.vcxproj \
	win32/msdev/programs/mk_flat/mk_flat.vcxproj.filters \
	win32/msdev/programs/mk_mdef_gen/mk_mdef_gen.vcxproj \
	win32/msdev/programs/mk_mdef_gen/mk_mdef_gen.vcxproj.filters \
	win32/msdev/programs/mk_mllr_class/mk_mllr_class.vcxproj \
	win32/msdev/programs/mk_mllr_class/mk_mllr_class.vcxproj.filters \
	win32/msdev/programs/mk_s2sendump/mk_s2sendump.vcxproj \
	win32/msdev/programs/mk_s2sendump/mk_s2sendump.vcxproj.filters \
	win32/msdev/programs/mk_ts2cb/mk_ts2cb.vcxproj \
	win32/msdev/programs/mk_ts2cb/mk_ts2cb.vcxproj.filters \
	win32/msdev/programs/mllr_solve/mllr_solve.vcxproj \
	win32/msdev/programs/mllr_solve/mllr_solve.vcxproj.filters \
	win32/msdev/programs/mllr_transform/mllr_transform.vcxproj \
	win32/msdev/programs/mllr_transform/mllr_transform.vcxproj.filters \
	win32/msdev/programs/norm/norm.vcxproj \
	win32/msdev/programs/norm/norm.vcxproj.filters \
	win32/msdev/programs/param_cnt/param_cnt.vcxproj \
	win32/msdev/programs/param_cnt/param_cnt.vcxproj.filters \
	win32/msdev/programs/printp/printp.vcxproj \
	win32/msdev/programs/printp/printp.vcxproj.filters \
	win32/msdev/programs/prunetree/prunetree.vcxproj \
	win32/msdev/programs/prunetree/prunetree.vcxproj.filters \
	win32/msdev/programs/tiestate/tiestate.vcxproj \
	win32/msdev/programs/tiestate/tiestate.vcxproj.filters


ACLOCAL_AMFLAGS = -I m4

DISTCHECK_CONFIGURE_FLAGS =

