pkginclude_HEADERS = \
	sys_compat/posixsock.h \
	sys_compat/misc.h \
	sys_compat/file.h \
	sys_compat/string.h \
	sys_compat/net.h \
	sys_compat/time.h \
	s3/live_norm.h \
	s3/pset_io.h \
	s3/s2io.h \
	s3/two_class.h \
	s3/bquest_io.h \
	s3/array_alloc.h \
	s3/segdmp.h \
	s3/s3ts2cb_io.h \
	s3/s3acc_io.h \
	s3/s3mixw_io.h \
	s3/tmat_param_io.h \
	s3/best_q.h \
	s3/cep_manip.h \
	s3/remap.h \
	s3/mixw_param_io.h \
	s3/s3io.h \
	s3/was_added.h \
	s3/s2_param.h \
	s3/mllr_class_io.h \
	s3/model_def.h \
	s3/ck_seg.h \
	s3/s3phseg_io.h \
	s3/mllr.h \
	s3/read_seno_dtree.h \
	s3/s2_write_seno.h \
	s3/gauden_io.h \
	s3/s3.h \
	s3/lambda_io.h \
	s3/mk_phone_seq.h \
	s3/prefix_upto.h \
	s3/bo_magic.h \
	s3/lts.h \
	s3/dtree.h \
	s3/bcomment_io.h \
	s3/merge_den.h \
	s3/div.h \
	s3/get_cpu_time.h \
	s3/get_time.h \
	s3/n_words.h \
	s3/mk_ts2ci.h \
	s3/vector.h \
	s3/s2_write_cb.h \
	s3/s2_read_cb.h \
	s3/metric.h \
	s3/s3cb2mllr_io.h \
	s3/mk_trans_seq.h \
	s3/array_io.h \
	s3/state_seq.h \
	s3/int32_io.h \
	s3/model_inventory.h \
	s3/timer.h \
	s3/topo_read.h \
	s3/gauden.h \
	s3/floatbuf_io.h \
	s3/quest.h \
	s3/mk_sseq.h \
	s3/profile.h \
	s3/s2_read_seno.h \
	s3/acmod_set.h \
	s3/state.h \
	s3/s3lamb_io.h \
	s3/s2_read_tmat.h \
	s3/cvt2triphone.h \
	s3/s3map_io.h \
	s3/s3tmat_io.h \
	s3/common.h \
	s3/lexicon.h \
	s3/prefetch.h \
	s3/model_def_io.h \
	s3/mk_wordlist.h \
	s3/ts2cb.h \
	s3/btree.h \
	s3/heap.h \
	s3/itree.h \
	s3/enum_subset.h \
	s3/fp_cache.h \
	s3/s2_write_hmm.h \
	s3/mllr_io.h \
	s3/swap.h \
	s3/kmeans.h \
	s3/mk_phone_list.h \
	s3/s2_read_map.h \
	s3/state_param_def_io.h \
	s3/intbuf_io.h \
	s3/s3gau_io.h \
	s3/norm.h \
	s3/get_host_name.h \
	s3/s2_mixing_weights.h \
	s3/acmod_set_ds.h \
	s3/kdtree.h \
	s3/corpus.h \
	s2/magic.h \
	s2/log.h \
	s2/byteorder.h
