pkginclude_HEADERS = \
	s3/acmod_set.h \
	s3/best_q.h \
	s3/ck_seg.h \
	s3/common.h \
	s3/corpus.h \
	s3/cvt2triphone.h \
	s3/div.h \
	s3/dtree.h \
	s3/gauden.h \
	s3/heap.h \
	s3/itree.h \
	s3/kdtree.h \
	s3/kmeans.h \
	s3/lexicon.h \
	s3/metric.h \
	s3/mk_phone_list.h \
	s3/mk_phone_seq.h \
	s3/mk_sseq.h \
	s3/mk_trans_seq.h \
	s3/mk_ts2ci.h \
	s3/mllr_class_io.h \
	s3/mllr.h \
	s3/mllr_io.h \
	s3/model_def.h \
	s3/model_def_io.h \
	s3/model_inventory.h \
	s3/pset_io.h \
	s3/quest.h \
	s3/remap.h \
	s3/s3acc_io.h \
	s3/s3cb2mllr_io.h \
	s3/s3gau_io.h \
	s3/s3.h \
	s3/s3io.h \
	s3/s3lamb_io.h \
	s3/s3map_io.h \
	s3/s3mixw_io.h \
	s3/s3phseg_io.h \
	s3/s3tmat_io.h \
	s3/s3ts2cb_io.h \
	s3/segdmp.h \
	s3/state.h \
	s3/state_seq.h \
	s3/swap.h \
	s3/topo_read.h \
	s3/ts2cb.h \
	s3/vector.h \
	s3/was_added.h \
	sys_compat/file.h \
	sys_compat/misc.h \
	sys_compat/time.h

